--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"nodemon server.js\" \"cd frontend && npm run dev\""
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "express-session": "^1.18.1",
     "mongoose": "^8.16.0",
     "nodemailer": "^7.0.3",
+    "socket.io": "^4.8.1",
     "swagger-ui-dist": "^5.25.3",
     "swagger-ui-express": "^5.0.1"
   },
